# gnome-initial-setup

./: Makefile.am  configure.ac
data/: Makefile.am
gnome-initial-setup/: Makefile.am  gnome-initial-setup.c
gnome-initial-setup/pages/: Makefile.am
gnome-initial-setup/pages/account/: gis-account-page.c  gis-account-page.h
gnome-initial-setup/pages/connman/: Makefile.am  gis-connman-page.c  gis-connman-page.h  gis-connman-page.ui  network.gresource.xml  technology-interface.xml
gnome-initial-setup/pages/eulas/: gis-eula-pages.c  gis-eula-pages.h
gnome-initial-setup/pages/goa/: gis-goa-page.c  gis-goa-page.h
gnome-initial-setup/pages/keyboard/: gis-keyboard-page.c  gis-keyboard-page.h  gnome-region-panel-input.c
gnome-initial-setup/pages/language/: gis-language-page.c  gis-language-page.h
gnome-initial-setup/pages/location/: gis-location-page.c  gis-location-page.h
gnome-initial-setup/pages/network/: Makefile.am  gis-network-page.c  gis-network-page.h  manager-interface.xml  network.gresource.xml  network.ui  service-interface.xml
gnome-initial-setup/pages/summary/: gis-summary-page.c  gis-summary-page.h
po/: POTFILES.in
